MOD-1606 - fix spinner from not showing correctly

--- a/src/main/resources/css/spinner.css
+++ b/src/main/resources/css/spinner.css
@@ -2,16 +2,19 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     min-width:100px;
     min-height:100px;
-    z-index: 100;
+    z-index: 99;
     background-color: rgba(0,0,0,0.3); /*dim the background*/
+    overflow: hidden;
 }
 
 .spinner{
     z-index:100;
     position: absolute;
-    top: calc((100vh/2) - 25px); left: calc((100vw/2) - 25px);
+    top: 50%;
+    left:50%;
+    transform: translate(-50%, -50%);
 }
